group = 'pl.edu.agh.iisg.to'
version = '1.0'

repositories {
    mavenCentral()
}

apply plugin: 'java'
apply plugin: 'application'

application {
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
    mainClass = 'pl.edu.agh.iisg.to.Main'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.42.0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}
